--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "ts-node-dev --respawn --ignore-watch node_modules src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "reflect-metadata": "^0.1.10",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
+    "sqlite3": "^4.0.3",
+    "typeorm": "0.2.26"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "@types/node": "^14.14.7",
+    "ts-node": "3.3.0",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "3.3.3333"
   }
 }
