--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "author": "Niilo Keinänen",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
-    "dotenv": "^8.2.0"
+    "axios": "^0.21.0"
   }
 }
